# clarity

./: .gitignore  CMakeLists.txt  ClarityNativeCode.props  LICENSE  README.md  badspec.txt  clarity.sln  clarityvalues.txt  cppapi.txt  install_manifest.txt  security.txt
AssemblyImporter/: AssemblyImporter.csproj  CRC32.cs  ParseFailedException.cs  Program.cs  RvaAndSize.cs  StreamParser.cs
Clarity.Rpa/: ArrayCloner.cs  CatalogReader.cs  CfgWriter.cs  Clarity.Rpa.csproj  CodeLocationTag.cs  DisassemblyWriter.cs  HighCatchHandler.cs  HighCfgEdge.cs  HighCfgNode.cs  HighCfgNodeBuilder.cs  HighCfgNodeHandle.cs  HighClassVtableSlot.cs  HighEHCluster.cs  HighEnumLiteral.cs  HighEscapePathTerminator.cs  HighField.cs  HighFileBuilder.cs  HighInstruction.cs  HighInterfaceImplementation.cs  HighInterfaceMethodImplementation.cs  HighLocal.cs  HighMethod.cs  HighMethodBody.cs  HighMethodBodyParseContext.cs  HighMethodBuilder.cs  HighPhi.cs  HighPhiLink.cs  HighProtectedRegion.cs  HighRegion.cs  HighRegionBuilder.cs  HighSsaRegister.cs  HighTryCatchRegion.cs  HighTryFaultRegion.cs  HighTryFinallyRegion.cs  HighTypeDef.cs  HighUnresolvedPhiCollection.cs  HighValueType.cs  HighVariance.cs  IBranchingInstruction.cs  IDisassemblyWritable.cs  (+27 more)
Clarity.RpaCompiler/: AssignabilityResolver.cs  Clarity.RpaCompiler.csproj  CliClass.cs  CliInterface.cs  CliInterfaceImpl.cs  CliInterfaceImplSlot.cs  CliMethodIndex.cs  CliType.cs  CliVtableSlot.cs  Compiler.cs  CompilerConfig.cs  MethodHandle.cs  MethodInstantiationPath.cs  MethodKey.cs  MethodSpecMethodKey.cs  RloBB.cs  RloClass.cs  RloLocal.cs  (+26 more)
(+474 files in other folders)
